--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -123,7 +123,7 @@ services:
     restart: unless-stopped
 
   splunkenterprise:
-    build:
+    build: .
     hostname: splunk
     image: splunk/splunk:latest
     environment:
